TEST_PROGRAMS/VALID_TYPECHECK/trivial_typechek.go
package main;

//this should pass trivially
func main() {

}
