TEST_PROGRAMS/INVALID/14/2051_expression_stmt_parens.go
package x

func main() {
  (x++);
}
